fix: minor adjustment to borderless button alignment

--- a/resources/css/components/_button.css
+++ b/resources/css/components/_button.css
@@ -198,7 +198,7 @@ button.borderless {
     border-color: transparent;
     box-shadow: none;
     color: var(--btn-borderless-color);
-    margin-inline-start: calc(-1 * var(--space-4));
+    margin-inline-start: calc(-1 * var(--space-5));
     padding-inline: var(--space-4);
 }
 
